// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Duplicate Button should render 1`] = `
<Button
  data-test="foo"
  onClick={[MockFunction]}
  small={true}
  type="button"
  variant="tertiary"
  withText={true}
>
  <DuplicateButton__IconPossiblyWithText
    icon={[Function]}
  />
</Button>
`;

exports[`Duplicate Button should render without duplicate text when asked to 1`] = `
<Button
  data-test="foo"
  onClick={[MockFunction]}
  small={true}
  type="button"
  variant="tertiary"
  withText={false}
>
  <DuplicateButton__IconPossiblyWithText
    icon={[Function]}
  />
</Button>
`;
